# seashore

./: LICENSE  README.rst  noxfile.py  pyproject.toml  requirements-docs.txt  requirements-lint.txt  requirements-mypy.txt  requirements-tests.txt  requirements.txt  setup.py
src/seashore/: _version.py  command.py  executor.py  shell.py
